--- a/SocialNetwork.Web/Content/Site.css
+++ b/SocialNetwork.Web/Content/Site.css
@@ -22,3 +22,26 @@ select,
 textarea {
     max-width: 280px;
 }
+
+footer 
+{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-width: 800px;
+}
+
+div.social-menu-bar 
+{
+    background-color: #ff5400;
+}
+
+div.social-menu-bar a
+{
+    color: #ffffff;
+}
+
+div.social-menu-bar ul.options-page a:hover 
+{
+    color: #ff5400
+}
