quase fechando o perfil

--- a/SocialNetwork.Web/Views/Home/Index.cshtml
+++ b/SocialNetwork.Web/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
             Nesta sessão você poderá editar seu perfil
         </p>
         <p>@Html.ActionLink("Editar perfil", "Create", "Profile")</p>
+        <p>@Html.ActionLink("Acessar perfil", "BuscarPerfilPorId", "Profile")</p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
