tentando fazer logica do botão de criacao de perfil

--- a/SocialNetwork.Web/Views/Home/Index.cshtml
+++ b/SocialNetwork.Web/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    var profile = ViewBag.profile;
 }
 
 <div class="jumbotron">
@@ -14,7 +15,14 @@
         <p>
             Nesta sessão você poderá editar seu perfil
         </p>
-        <p>@Html.ActionLink("Editar perfil", "Create", "Profile")</p>
+
+        @{
+            if (profile == false)
+            {
+            <p>@Html.ActionLink("Criar perfil", "Create", "Profile")</p>
+             }
+        }
+
         <p>@Html.ActionLink("Acessar perfil", "BuscarPerfil", "Profile")</p>
     </div>
     <div class="col-md-4">
