--- a/SocialNetwork.Web/Views/Home/Index.cshtml
+++ b/SocialNetwork.Web/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
             Nesta sessão você poderá editar seu perfil
         </p>
 
-        @*@{
-            if (profile == null)
-            {*@
+        @{
+            if (Session["Profile"] == null)
+            {
             <p>@Html.ActionLink("Criar perfil", "Create", "Profile")</p>
-             @*}
-        }*@
+             }
+        }
 
         <p>@Html.ActionLink("Acessar perfil", "BuscarPerfil", "Profile")</p>
     </div>
