--- a/SocialNetwork.Web/Views/Profile/Create.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Perfil</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Profile", FormMethod.Post, new {enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     
@@ -36,6 +36,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Foto de perfil</label>
+            <div class="col-md-10">
+                <input class="form-control" type="file" id="ProfilePicture" name="ProfilePicture"/>
             </div>
         </div>
 
