--- a/SocialNetwork.Web/Views/Profile/Details.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Details.cshtml
@@ -1,14 +1,19 @@
 ﻿@model SocialNetwork.Web.Models.ProfileViewModel
+@Styles.Render("~/Content/css")
 
 @{
     ViewBag.Title = "Details";
+    var url = ViewBag.PictureUrl;
 }
 
 <h2>Perfil</h2>
 
 <div>
-    <hr />
     <dl class="dl-horizontal">
+        <dd>
+            <img class="foto-perfil" src="@Url.Content(url)" />
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
