--- a/SocialNetwork.Web/Views/Profile/Edit.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditarPerfil", "Profile", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
