Criando galeria de imagens

--- a/SocialNetwork.Web/Content/Site.css
+++ b/SocialNetwork.Web/Content/Site.css
@@ -52,3 +52,9 @@ div.social-menu-bar ul.options-page a:hover
     height: 150px;
     border-radius: 50%;
 }
+
+.foto-gallery 
+{
+    width: 150px;
+    height: 150px;
+}
