--- a/SocialNetwork.Web/Views/Home/Index.cshtml
+++ b/SocialNetwork.Web/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
 
                 <p>@Html.ActionLink("Acessar perfil", "BuscarPerfil", "Profile", new { value = "Details" }, null)</p>
                 <p>@Html.ActionLink("Editar perfil", "BuscarPerfil2", "Profile", new { value = "Edit" }, null)</p>
+                <p>@Html.ActionLink("Galeria de imagens", "GetPhotoAlbum", "Profile", new { value = "GetPhotoAlbum" }, null)</p>
 
                 @*<p>@Html.ActionLink("Acessar perfil", "SetValueParameter", "Profile", new { value = "Details"}, null)</p>
                 <p>@Html.ActionLink("Editar perfil", "SetValueParameter", "Profile", new { value = "Edit" }, null)</p>*@
