--- a/SocialNetwork.Web/Views/Profile/Details.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Details.cshtml
@@ -43,5 +43,5 @@
 
 <p>
     @Html.ActionLink("Editar perfil", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Home", "Index", "Home")
+    @Html.ActionLink("Galeria de imagens", "GetPhotoAlbum", "Profile", new { value = "GetPhotoAlbum" }, null)
 </p>
