--- a/SocialNetwork.Web/Views/Profile/Edit.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Edit.cshtml
@@ -5,7 +5,7 @@
     var profilePicture = ViewBag.ProfilePicture;
 }
 
-<h2>Edit</h2>
+<h2>Edite o perfil</h2>
 
 
 @using (Html.BeginForm("EditarPerfil", "Profile", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -13,8 +13,6 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>ProfileViewModel</h4>
-    <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -56,7 +54,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index", "Home")
 </div>
 
 @section Scripts {
