Dando andamento ao crud de galerias

--- a/SocialNetwork.Web/Views/Gallery/Index.cshtml
+++ b/SocialNetwork.Web/Views/Gallery/Index.cshtml
@@ -4,21 +4,15 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Galeria de imagens</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar nova galeria", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.GalleryId)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProfileId)
         </th>
         <th></th>
     </tr>
@@ -26,18 +20,12 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.GalleryId)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ProfileId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id=item.GalleryId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.GalleryId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.GalleryId})
         </td>
     </tr>
 }
