--- a/SocialNetwork.Web/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="logotipo" src="destrava-logo.png"/>
+                <img class="logotipo" src="/destrava-logo.png"/>
                 @*@Html.ActionLink("destrave", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
@@ -25,11 +25,9 @@
                     @{
                         if (Session["access_token"] == null)
                         {
-
                             using (Html.BeginForm("Login", "Account", FormMethod.Post))
                             {
                                 @Html.AntiForgeryToken()
-
                                 <div class="login-form">
                                     <span>
                                         <label for="username">Username</label>
