--- a/SocialNetwork.Web/Content/Site.css
+++ b/SocialNetwork.Web/Content/Site.css
@@ -29,7 +29,6 @@ textarea {
 
 footer 
 {
-    position: absolute;
     bottom: 0;
     width: 100%;
     max-width: 800px;
@@ -56,10 +55,26 @@ div.social-menu-bar ul.options-page a:hover
     color: #ff5400
 }
 
-.foto-perfil
+div.image-container
 {
+    width: fit-content;
+    border-radius:50%;
+    border: 1px solid #808080;
+    margin: 10px 0;
+}
+
+.foto-perfil 
+{
+    padding: 5px;
     width: 150px;
     height: 150px;
+    border-radius:50%;
+}
+
+.foto-perfil.miniatura
+{
+     width: 90px;
+    height: 90px;
 }
 
 .foto-gallery 
@@ -148,4 +163,53 @@ img.logotipo
 form
 {
     display:flex;
+}
+section.apresentacao
+{
+    width:350px;
+    height:200px;
+    border-radius: 3px;
+    background: #e9ebee;
+}
+
+h2.profile-name
+{
+    margin-top: -10px;
+}
+section.menu-perfil {
+    width: 100%;
+    height: 40px;
+    border-radius: 3px;
+    background: #e9ebee;
+}
+
+section.menu-perfil ul
+{
+    padding: 0;
+    display:flex;
+    justify-content: space-between;
+}
+
+section.menu-perfil ul li
+{
+    width:20%;
+    padding: 10px 20px;
+    text-align: center;
+    display:inline-block;
+}
+
+section.apresentacao h4
+{
+    padding:20px 40px 5px;
+}
+
+section.apresentacao ul
+{
+    list-style: none;
+}
+
+section.friends-list
+{
+    display: flex;
+    align-items: center;
 }
