--- a/SocialNetwork.Web/Views/Gallery/Details.cshtml
+++ b/SocialNetwork.Web/Views/Gallery/Details.cshtml
@@ -27,5 +27,5 @@
 </div>
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.GalleryId }) |*@
-    @Html.ActionLink("Voltar para galerias", "Index")
+    @*@Html.ActionLink("Voltar para galerias", "Index")*@
 </p>
