--- a/SocialNetwork.Web/Views/Profile/Details.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Details.cshtml
@@ -43,5 +43,5 @@
 
 <p>
     @Html.ActionLink("Editar perfil", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Galeria de imagens", "GetGalleries", "Gallery", new { value = "GetPhotoAlbum" }, null)
+    @Html.ActionLink("Galeria de imagens", "GetGalleries", "Gallery", null, null)
 </p>
