Correcao no metodo de visualizacao de galerias por id do usuario

--- a/SocialNetwork.Web/Views/Profile/Details.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Details.cshtml
@@ -43,5 +43,5 @@
 
 <p>
     @Html.ActionLink("Editar perfil", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Galeria de imagens", "GetGalleries", "Gallery", null, null)
+    @Html.ActionLink("Galeria de imagens", "GetLogedUserGalleries", "Gallery", null, null)
 </p>
