--- a/SocialNetwork.Web/Views/Profile/ProfileFromListPage.cshtml
+++ b/SocialNetwork.Web/Views/Profile/ProfileFromListPage.cshtml
@@ -16,7 +16,7 @@
             <li>Sobre</li>
             <li>Amigos</li>
             <li>
-                @Html.ActionLink("Galeria de imagens", "GetGalleriesById/" + Model.Id, "Gallery", null, null )
+                @Html.ActionLink("Galeria de imagens", "GetGalleriesByUserId/" + Model.Id, "Gallery", null, null )
             </li>
             <li>Mais</li>
         </ul>
