Algumas alterações no delete

--- a/SocialNetwork.Web/Views/Gallery/Details.cshtml
+++ b/SocialNetwork.Web/Views/Gallery/Details.cshtml
@@ -16,13 +16,13 @@
             <a href="@Url.Content(image.Url)" target="blank">
                 <img class="foto-gallery" src="@Url.Content(image.Url)" />
             </a>
+            @Html.ActionLink("Remover", "Delete/" + image.ImageId, "Images", null, null)
         }
 
     </div>
-
+    <p>
         @Html.ActionLink("Adicionar nova imagem", "AddImageToGallery")   
-
-
+    </p>
 
 </div>
 <p>
