--- a/SocialNetwork.Web/Views/Gallery/Index.cshtml
+++ b/SocialNetwork.Web/Views/Gallery/Index.cshtml
@@ -23,9 +23,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GalleryId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GalleryId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GalleryId})
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.GalleryId }) |*@
+            @Html.ActionLink("Detalhes", "Details", new { id=item.GalleryId }) |
+            @Html.ActionLink("Deletar", "Delete", new { id=item.GalleryId})
         </td>
     </tr>
 }
