--- a/SocialNetwork.Web/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork.Web/Views/Shared/_Layout.cshtml
@@ -44,10 +44,14 @@
                         else
                         {
                                 <li>
-                                    <i class="fa fa-home" aria-hidden="true" title="Home">
-                                        @Html.ActionLink("Home", "Index", "Home", null, new { @class = "transparent" })
-                                    </i>
+                                    @*@Html.ActionLink(ViewBag.UserLoged, "Details", "Profile", null, new { @class = "transparent" })*@
+                                    @Html.Encode(User.Identity.Name)
                                 </li>
+                            <li>
+                                <i class="fa fa-home" aria-hidden="true" title="Home">
+                                    @Html.ActionLink("Home", "Index", "Home", null, new { @class = "transparent" })
+                                </i>
+                            </li>
                             if (Session["Profile"] != null)
                             {
                                 <li>
