Alteracao no controller de post

--- a/SocialNetwork.Web/Views/Home/Index.cshtml
+++ b/SocialNetwork.Web/Views/Home/Index.cshtml
@@ -23,7 +23,9 @@
             }
             else
             {
-                <h2>Informações de perfil</h2>
+                <p>@Html.ActionLink("Criar postagem", "Create", "Posts")</p>
+
+
 
                 @*<p>@Html.ActionLink("Acessar perfil", "BuscarPerfil", "Profile", new { value = "Details" }, null)</p>
                 <p>@Html.ActionLink("Editar perfil", "BuscarPerfil2", "Profile", new { value = "Edit" }, null)</p>
